# kmean-rs

./: Cargo.toml
src/: api.rs  lib.rs  memory.rs
src/distances/: euclidean.rs  histogram.rs
src/inits/: kmeanplusplus.rs  precomputed.rs  randompartition.rs  randomsample.rs
src/variants/: lloyd.rs  minibatch.rs
