[package]
name = "kmeans"
version = "3.0.0"
authors = ["Markus Ebner <hiwatari.seiji@gmail.com>"]
edition = "2024"
description = "Small and fast library for k-means clustering calculations."
documentation = "https://docs.rs/kmeans/"
repository = "https://github.com/seijikun/kmean-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["kmeans", "k-means", "means", "cluster", "clustering"]
categories = ["algorithms", "science"]
exclude = ["examples/*"]

[dependencies]
rayon = "1.11.0"
rand = "0.9"
num = "0.4.3"
num-traits = "0.2.19"
aligned-vec = "0.6"

[lib]
name = "kmeans"
path = "src/lib.rs"

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
incremental = false
